# orbisDiskTool

./: .gitignore  Makefile.am  configure.ac
.github/workflows/: main.yml
orbisDiskTool/: Makefile.am  OrbisDiskFuse.cpp  OrbisDiskFuse.hpp  OrbisInternalDisk.cpp  OrbisInternalDisk.hpp  main.cpp
orbisDiskTool.xcodeproj/: project.pbxproj
